# rusty-invaders

./: Cargo.toml  LICENSE  README.md  build.sh
src/: game.rs  main.rs
src/components/: mod.rs
src/entities/: bullet.rs  enemy.rs  mod.rs  player.rs
src/libs/: assets.rs  config.rs  intervals.rs  mod.rs  sounds.rs  textures.rs
